--- a/xmp/call.tmpl
+++ b/xmp/call.tmpl
@@ -16,7 +16,7 @@
 	<body>
 	<div class="head">
 	<div class="col1"><span id="left">Кількість записів: {{.Rcn}}</span></div>
-	<div class="col2"><span id="right">Тривалість запиту: {{.Rdr}}</span></div>
+	<div class="col2"><span id="right">Тривалість запиту: {{.Rdr}} сек.</span></div>
 	</div>
    <div class=top>
     <table id="tbl">
