--- a/xmp/call.tmpl
+++ b/xmp/call.tmpl
@@ -15,6 +15,7 @@
 	</head>
 	<body>
 	<div class="head">
+	<div class="col0"><span id="center">5ESS</span></div>
 	<div class="col1"><span id="left">Кількість записів: {{.Rcn}}</span></div>
 	<div class="col2"><span id="right">Тривалість запиту: {{.Rdr}} сек.</span></div>
 	</div>
