--- a/xmp/form.tmpl
+++ b/xmp/form.tmpl
@@ -69,6 +69,7 @@
     <body>
     <form id="f0" action="/call" method="post"></form>
     <div class="col"><span id="left">Кількість записів: {{.}}</span></div>
+    <div class="col0"><span id="center">5ESS</span></div>
     <div class="col2"></div>
    <div class=top>
     <table id="tbl">
