--- a/css/zstat.css
+++ b/css/zstat.css
@@ -3,8 +3,9 @@ html,body{width:100%;height:100%;padding: 0;margin: 0;overflow: hidden;font-fami
 .home{top:50%;position:fixed;z-index:1;display:inline-block;right:-30px;height:100%;background-color:#232323;text-align: center;}
 .alrm{position:fixed;left:40%;top:50%;z-index:1;display:inline-block;background-color:#232323;text-align: center;color:red;}
 .col{position:fixed;width: 100%;left:0%;color: #00ff30;background:#232323;height:30px; top:0px;font-size:10px;text-align: left;}
-.col1{position:fixed;width: 50%;left:0%;color: lightgray;background:#232323;height:30px; top:0px;font-size:10px;text-align: left;}
-.col2{position:fixed;width: 50%;left:50%;color: lightgray;background:#232323;height:30px; top:0px;font-size:10px;text-align: right;}
+.col0{position:fixed;width: 30%;left:50%;color: lightgray;background:#232323;height:30px; top:0px;font-size:10px;text-align: left;}
+.col1{position:fixed;width: 30%;left:0%;color: lightgray;background:#232323;height:30px; top:0px;font-size:10px;text-align: left;}
+.col2{position:fixed;width: 30%;left:70%;color: lightgray;background:#232323;height:30px; top:0px;font-size:10px;text-align: right;}
 .top {position:fixed;z-index:2;display:inline-block;height:30px;top:30px;left:0px;background-color:#232323;}
 .top table{table-layout: fixed;height:100%;}
 .bot {position:absolute;z-index:1;padding-bottom: 25px;right:-30px;left:0px;top:60px;background: #232323;color:#4D4D4D;}
@@ -12,6 +13,7 @@ html,body{width:100%;height:100%;padding: 0;margin: 0;overflow: hidden;font-fami
 .tmp {position: absolute;left: 0;top: 60px;right:-30px;bottom: 25px;padding-right: 15px;overflow-y: scroll;}
 .tmp table{table-layout: fixed;width: 100%;}
 #left{position:absolute;top:50%;}
+#center{position:absolute;top:50%;left:0px;}
 #right{position:absolute;top:50%;right:0px;}
 #home{color:#00ff30;font-family:"Arial",sans-serif;font-size:18px;}
 #tbl {font-size:10px;background:#fff;border-collapse:collapse;text-align:left;width: 100%;}
